auth-services/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
---
# Because this service has no selector, the corresponding Endpoints
# object will not be created. You can manually map the service to
# your own specific endpoints:
kind: Endpoints
apiVersion: v1
metadata:
  name: database-service
subsets:
  - addresses:
      - ip: kubernetes.docker.internal
    ports:
      - port: 5432
