auth-services/db-services.yml
kind: Service
apiVersion: v1
metadata:
  name: postgres-db-svc
  namespace: external
spec:
  selector:
    app: postgre-server
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
    nodePort: 32002
  type: NodePort
---
kind: Endpoints
apiVersion: v1
metadata:
  name: postgres-db-svc
  namespace: external
subsets: 
- addresses:
  - ip: 10.10.1.1
  ports:
  - port: 5432
