auth-services/auth-services-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-services
                port:
                  number: 9094
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 9090
